[package]
name = "auth-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# Your user management library
user_mgmt_api = { package = "user-mgmt-api", git = "https://github.com/AncientiCe/user-mgmt-api", branch = "main" }

# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"